welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:14: warning: enclosing method getMotif has result type Unit: return value discarded
    return tab
    ^Array1:20: error: not found: value tab
  tab=getMotif()
  ^